tests/derive_compile_fail/enum_rejected.stderr
error: FromRow does not support enums
 --> tests/derive_compile_fail/enum_rejected.rs:4:1
  |
4 | enum Bad {
  | ^^^^
